<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="false"
    android:backgroundTint="@color/azul"
    app:cardPreventCornerOverlap="true"
    android:layout_margin="30dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:padding="70dp">

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/tv_titulo"
            android:textSize="36sp"
            android:textStyle="bold"
            android:backgroundTint="@color/azul"
            android:layout_marginBottom="5dp"
            android:text="@string/msgTitulo"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/tv_data"
            android:backgroundTint="@color/azul"
            android:text="@string/msgData"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/tv_status"
            android:background="@drawable/shape"
            android:text="@string/dataRealizacao"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:backgroundTint="@color/verde"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>